ocpmanifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
  namespace: demo-openshift-pipeline
spec:
  ports:
    - name: http-demo
      port: 8080
      targetPort: 8080
  selector:
    app: html-frontend
  type: ClusterIP
