ocpmanifest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-web-openshift02
  namespace: demo-openshift-pipeline
spec:
  host: demo-openshift02.demo.sss.lab
  port:
    targetPort: 8080
  to:
    kind: Service
    name: demo-webip-service
